# inflation-resistant-token

./: .gitignore  A Stablecoin-backed Flatcoin.docx  An Inflation-Resistant Flatcoin-backed Flatcoin.docx  IRMA Architecture.docx  Implementation-Arbitrage.md  Implementation.md  README.md  TestResults.md  crank_irma.rs
drawings/: HowTheIRMASystemWorks.txt  IRMABusinessCase.txt
irma/: .env.example  .gitignore  Anchor.toml  Cargo.pool.toml  Cargo.toml  Dockerfile  IMPLEMENTATION_GUIDE_NEXT_STEPS.md  MILESTONE_COMPLETION.md  README.md  SETUP_GUIDE.md  devnet-config.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
irma/.cargo/: config.toml
irma/.github/: copilot-instructions.md
irma/cloudflareworker_swap/: .gitignore  README.md  deploy.sh  package-lock.json  package.json  schema.sql  wrangler.jsonc  wrangler.toml
irma/cloudflareworker_swap/src/: config.js  d1_logs.js  dlmm.js  process_rebalance.js  worker.js
irma/cloudflareworker_swap/truflation-proxy/: .gitignore  README.md  deploy.sh  package-lock.json  package.json
irma/cloudflareworker_swap/truflation-proxy/api/: inflation.js
irma/commons/: Cargo.toml
irma/commons/src/: account_filters.rs  constants.rs  lib.rs  pda.rs  quote.rs  token_2022.rs
irma/commons/src/conversions/: activation_type.rs  dlmm_bytemuck.rs  mod.rs  pair_type.rs  status.rs  token_program_flag.rs
irma/commons/src/extensions/: bin.rs  bin_array.rs  bin_array_bitmap.rs  lb_pair.rs  position.rs
irma/commons/src/math/: price_math.rs  u128x128_math.rs  u64x64_math.rs  utils.rs
irma/commons/tests/on_chain/: Cargo.toml  Makefile  README.md  UBUNTU_README.md  main.rs  mod_test.rs  run_tests.bat  run_tests.sh  run_tests_ubuntu.sh  test_swap.rs  test_swap_token2022.rs  utils.rs
irma/idls/: dlmm.json
irma/keypairs/: fdusd-mint.json  irma-mint.json  pyusd-mint.json  usdc-mint.json  usdg-mint.json  usds-mint.json  usdt-mint.json
irma/programs/commons/: Cargo.toml
irma/programs/commons/src/: account_filters.rs
irma/programs/irma/: Cargo.toml  not-used-build.rs
irma/programs/irma/idls/: example.json  irma_parsed.json  openbook_v2.json  openbook_v2_fetched.json  openbook_v2_min.json  readme.txt  whirlpool_idl_devnet.json  whirlpool_idl_github.json  whirlpool_idl_mainnet.json
irma/programs/irma/src/: bin_array_manager.rs  errors.rs  lib.rs  meteora_integration.rs  minimal_orca.rs  orca_integration.rs  pair_config.rs  position_manager.rs  pricing.rs  protocol_state.rs  token_operations.rs  utils.rs
irma/programs/irma/tests/: libtest.rs  meteora_integration.rs  unit.rs
irma/scripts/: README.md  RUNBOOK.md  create_dlmm_pools.cjs  create_irma_usdt_pool.ts  create_irma_usdt_pool_v2.ts  create_orca_position.ts  devnet_check_shift.cjs  initialize_protocol_with_position.ts  pool_creation_guide.ts  pool_integration_demo.ts  reconstruct_config.cjs  register_all_reserves.cjs  seed_dlmm_liquidity.cjs  setup_devnet_tokens.cjs
irma/tests/: add_reserve.ts  close_accounts.ts  connect_lb_pair.ts  get_prices_for_all.ts  get_prices_for_usdc.ts  list_reserve.ts  read_core_positions.ts  read_protocol_state.ts  remove_reserve.ts  test_check_shift_price.ts  test_inflation.ts  test_initialize.ts  test_limit_order.ts  test_mint_price.ts  test_swap.ts  test_swap_thru_meteora.ts  update_reserve_lbpair.ts
openbook-v2-ui/: package-lock.json
