[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = ["debug-assert-in-release"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1


[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1