[package]
name = "irma"
version = "0.1.0"
description = "Inflation Resistant Medium of Account (IRMA)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "irma"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
fixed = { workspace = true }
orca_whirlpools = { version = "5.0.1"}
solana-pubkey = "2.1.0"
solana-program = "=2.3.0"
solana-sdk = "2.3.0"
curve25519-dalek = "3.2.1"
solana-derivation-path = "=2.2.1"
static_assertions = "1.1.0"