[package]
name = "irma"
version = "0.1.0"
description = "Inflation Resistant Medium of Account (IRMA)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "irma"

[features]
default = ["custom"]
cpi = ["no-entrypoint"]
no-entrypoint = []
custom = []
# no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# anchor-debug = []
# custom-heap = []
# custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
# Remove orca_whirlpools entirely and use our minimal implementation
# orca_whirlpools = { workspace = true, default-features = false }
fixed = { workspace = true }
static_assertions = "1.1.0"
getrandom = { workspace = true }

