[package]
name = "irma"
version = "0.1.0"
description = "Inflation Resistant Medium of Account (IRMA)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "irma"

[features]
default = ["custom"]
cpi = ["no-entrypoint"]
no-entrypoint = []
custom = []
# no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# anchor-debug = []
# custom-heap = []
# custom-panic = []

[dependencies]
# Core Solana program dependencies
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }

# Math and utility libraries for on-chain use
fixed = { workspace = true }
static_assertions = "1.1.0"
bytemuck = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
borsh = { workspace = true }
bincode = { workspace = true }
ruint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
# solana-sdk = { workspace = true }
commons = { workspace = true }

[dev-dependencies]
spl-associated-token-account = { workspace = true }
solana-program-test = "2.1.0"
assert_matches = "1.5.0"
solana-program = "2.1.0"
spl-memo = { workspace = true, features = ["no-entrypoint"] }

