[package]
name = "commons-on-chain-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true, features = ["async"] }
anyhow = { workspace = true }
commons = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
bincode = { workspace = true }
# solana-program = "2.2.1"
# solana-sdk = "2.2.1"
spl-associated-token-account = { workspace = true }
spl-token = "6.0.0"
spl-token-2022 = "8.0.1"
# solana-derivation-path = "^2.1.0"
zeroize = "^1.3.0"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "on_chain_tests"
path = "main.rs"